--- a/application/modules/performer/views/scripts/index/tasks.phtml
+++ b/application/modules/performer/views/scripts/index/tasks.phtml
@@ -1,7 +1,7 @@
 
         <?php if(!$this->tasks){?>
         <div class="col-lg-12">
-            <h3>Задач не найдено</h3>
+            <h3>По вашим видам деятельности задач не найдено</h3>
         </div>
         <?php }else{ ?>
         <div class="col-lg-12">
@@ -20,9 +20,29 @@
 
         <tbody>
     <?php foreach($this->tasks as $task){?>
+            <?php 
+                $taskPoints = 15*$task['customers_price'];
+                $taskPoints = $taskPoints/100;
+            ?>
             <tr id="div<?= $customer['id'] ?>">
-                <td><a href="<?= $this->baseUrl() ?>/performer/task/view/id/<?= $task['id'] ?>"><?= $task['title'] ?></td>
-                <td><a href="<?= $this->baseUrl()?>/performer/customer/view/id/<?= $task['customer_id'] ?>"><?= $task['c_username'].' '.$task['c_surname'] ?></a></td>
+                <td>
+                    <?php if($this->freePoints >= $taskPoints){?>
+                        <a href="<?= $this->baseUrl() ?>/performer/task/view/id/<?= $task['id'] ?>">
+                    <?php }else{?> 
+                        <a data-toggle="modal" data-target="#notallowedModal">
+                    <?php } ?>
+                        <?= $task['title'] ?>
+                    </a>    
+                    </td>
+                <td>
+                    <?php if($this->freePoints >= $taskPoints){?>
+                        <a href="<?= $this->baseUrl()?>/performer/customer/view/id/<?= $task['customer_id'] ?>">
+                    <?php }else{?>    
+                        <a data-toggle="modal" data-target="#notallowedModal">   
+                    <?php } ?>        
+                            <?= $task['c_username'].' '.$task['c_surname'] ?>
+                    </a>
+                </td>
                 <td><?= date("d.m.Y", $task['final_date']) ?></td>
                 <td><?= date("h:i d.m.Y", $task['created_at']) ?></td>
                 <td><?= $task['customers_price'] ?></td>
@@ -32,7 +52,24 @@
  </tbody>
 </table>
         <?php } ?>
-
+        <div class="modal fade" id="notallowedModal" tabindex="-1" role="dialog" aria-labelledby="notallowedLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Недостаточно количество баллов</h4>
+              </div>
+              <div class="modal-body">
+                  <p>
+                      У вас недостаточно баллов для отправки заявки по этой задаче.
+                  </p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Отмена</button>
+              </div>
+            </div>
+          </div>
+        </div>  
 <script>
 $(document).ready(function(){
    $('#taskTable').DataTable();
