--- a/application/modules/performer/views/scripts/user/index.phtml
+++ b/application/modules/performer/views/scripts/user/index.phtml
@@ -220,10 +220,11 @@
 
   <!-- Nav tabs -->
   <ul class="nav nav-tabs" role="tablist">
-    <li role="presentation" class="active"><a href="#orders" aria-controls="orders" role="tab" data-toggle="tab">Заказы</a></li>
+    <li role="presentation" class="active"><a href="#orders" aria-controls="orders" role="tab" data-toggle="tab">Принятые заказы</a></li>
     <li role="presentation"><a href="#tasks" aria-controls="tasks" role="tab" data-toggle="tab">Мои задачи</a></li>
-    <li role="presentation"><a href="#app" aria-controls="app" role="tab" data-toggle="tab">Мои заявки</a></li>
-   
+    <?php if($this->userPrepositions){?>
+        <li role="presentation"><a href="#app" aria-controls="app" role="tab" data-toggle="tab">Мои заявки</a></li>
+    <?php } ?>
     <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Настройки</a></li>
     
    
@@ -314,10 +315,28 @@
        <?php }?>    
         </div>
     </div>
-    <div role="tabpanel" class="tab-pane" id="app">
-      Заявки на выполнение
-    </div>
+    <?php if($this->userPrepositions){?>  
+        <div role="tabpanel" class="tab-pane" id="app">
+       <table id="tasksTable" class="table table-striped table-bordered table-responsive" cellspacing="0" width="100%">
+        <thead>
+            <tr>
+                <th>Задача</th>
+                <th>Заказчик</th>
+            </tr>
+        </thead>    
 
+        <tbody>
+            <?php foreach($this->userPrepositions as $prep){?>
+            <tr >
+                <td><a href="<?= $this->baseUrl().'/performer/task/view/id/'.$prep['t_id']?>"><?= $prep['t_title'] ?></a></td>
+                <td><a href="<?= $this->baseUrl().'/performer/customer/view/id/'.$prep['t_customer_id'] ?>"><?= $prep['cust_surname'].' '.$prep['cust_username'] ?></td>
+                
+            </tr>
+            <?php } ?>
+         </tbody>
+        </table>
+        </div>
+    <?php } ?>
     <div role="tabpanel" class="tab-pane" id="settings">
       <div role="tabpanel2">
               
