--- a/application/modules/customer/views/scripts/task/view.phtml
+++ b/application/modules/customer/views/scripts/task/view.phtml
@@ -168,13 +168,15 @@
                         <?php foreach($this->taskMessages as $message){?>
                             <?php if($message['user_from'] == $this->currentUser->id){?>
                                 <div class="list-group list-group-item">
+                                    <img src="<?= $this->baseUrl().'/images/users_images/'.$message['uf_image'] ?>" height="60" ></br>
                                      <h4 class="list-group-item-heading"><?= $this->currentUser->username ?> <?= $this->currentUser->surname ?></h4>
                                      <small><?= date("h:i d.m.Y",$message['created']) ?></small>
                                      <p class="list-group-item-text"><?= $message['text'] ?></p>
                                 </div>
                             <?php }else{?>
                                 <div class="list-group list-group-item" style="text-align: -webkit-right;">
-                                     <h4 class="list-group-item-heading"><?= $message['uf_username']." ".$message['uf_surname'] ?></h4>
+                                    <img src="<?= $this->baseUrl().'/images/users_images/'.$message['uf_image'] ?>" height="60" ></br> 
+                                    <h4 class="list-group-item-heading"><?= $message['uf_username']." ".$message['uf_surname'] ?></h4>
                                      <small><?= date("h:i d.m.Y",$message['created']) ?></small>
                                      <p class="list-group-item-text"><?= $message['text']?></p>
                                 </div>
@@ -200,7 +202,7 @@
 
         <div class="row">
       
-       <table id="prepTable" class="display" cellspacing="0" width="100%">
+       <table id="prepTable" class="table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
             <tr>
                 <th>Исполнитель</th>
@@ -217,7 +219,7 @@
                     <a href="<?= $this->baseUrl()."/customer/performers/performer-view/id/".$preposition['performer_id'] ?>"><?= $preposition['u_surname'].' '.$preposition['u_username'] ?></a>
                 </td>
                 <td>
-                    <?= $preposition['rating'] ?>
+                    <?= floor($preposition['rating']) ?>
                 </td>
                 <td>
                     <?php if($preposition['performers_price']){?>
@@ -405,7 +407,7 @@ function sendMessage(taskId, senderId, addressee){
             success: function(response){
                 $('#messagePrel').hide();
                 $('#senMessageBut').show();
-                $('#messagesArea').append('<div class="list-group list-group-item"><h4 class="list-group-item-heading"><?= $this->currentUser->username ?> <?= $this->currentUser->username ?></h4><small>'+created+'</small><p class="list-group-item-text">'+message+'</p></div>');
+                $('#messagesArea').append('<div class="list-group list-group-item"><img src="<?= $this->baseUrl().'/images/users_images/'.$this->currentUser->image ?>" height="60" ></br><h4 class="list-group-item-heading"><?= $this->currentUser->username ?> <?= $this->currentUser->username ?></h4><small>'+created+'</small><p class="list-group-item-text">'+message+'</p></div>');
                 $('#messagesArea').animate({ scrollTop: 100000000 }, "slow");
             }
         }); 
