--- a/public/assets/css/ion.checkRadio.cloudy.css
+++ b/public/assets/css/ion.checkRadio.cloudy.css
@@ -1,10 +1,10 @@
-/* Ion.CheckRadio, Cloudy Skin
+ Ion.CheckRadio, Cloudy Skin
 // Version 1.0.0
 // by Denis Ineshin | ionden.com
-// ===================================================================================================================*/
+// ===================================================================================================================
 
-/* =====================================================================================================================
-// Skin details */
+ =====================================================================================================================
+// Skin details 
 
 .icr__radio, .icr__checkbox {
     background: url(../../images/icr-cloudy-skin.png) no-repeat;
