--- a/application/modules/customer/views/scripts/office/index.phtml
+++ b/application/modules/customer/views/scripts/office/index.phtml
@@ -160,7 +160,23 @@
         <tbody>
             <?php foreach($this->customersTasks as $task){?>
             <tr id="tr<?= $task['id'] ?>">
-                <td><a href="<?= $this->baseUrl().'/customer/task/view/id/'.$task['id']?>"><?= $task['title'] ?></a></td>
+                <?php  $tpObj = new Customer_Model_DbTable_TaskPrepositionModel();
+                       $prepositions = count($tpObj->getTasksPrepositionis($task['id']));
+                ?>
+                <td>
+                    <a href="<?= $this->baseUrl().'/customer/task/view/id/'.$task['id']?>">
+                        <?= $task['title'] ?>
+                    </a>
+                    <?php if($task['status']== 'non_taken'){?>
+                    
+                        <?php if($prepositions > 0){?>
+                            <span class="badge">
+                               <?= $prepositions ?>
+                           </span>
+                        <?php } ?>
+                    
+                    <?php } ?>
+                </td>
                 <td><?=  date('H:i d-m-Y', $task['created_at'])?></td>
                 <td><?= date('H:i d-m-Y', $task['final_date']) ?></td>
                 <td>
@@ -171,6 +187,11 @@
                          case "closed":
                              echo "закрыта";
                              break;
+                         case "taken":
+                             echo "в работе";
+                             break;
+                         default:
+                             echo 'не известно';
                   }
                   ?>
                 </td>
