--- a/application/modules/performer/views/scripts/task/view.phtml
+++ b/application/modules/performer/views/scripts/task/view.phtml
@@ -93,12 +93,14 @@
                 <?php foreach($this->taskMessages as $message){?>
                     <?php if($message['user_from'] == $this->currentUser->id){?>
                         <div class="list-group list-group-item">
+                            <img src="<?= $this->baseUrl().'/images/users_images/'.$message['uf_image'] ?>" height="60" ></br>
                              <h4 class="list-group-item-heading"><?= $this->currentUser->username ?> <?= $this->currentUser->surname ?></h4>
                              <small><?= date("h:i d.m.Y",$message['created']) ?></small>
                              <p class="list-group-item-text"><?= $message['text'] ?></p>
                         </div>
                     <?php }else{?>
                         <div class="list-group list-group-item" style="text-align: -webkit-right;">
+                            <img src="<?= $this->baseUrl().'/images/users_images/'.$message['uf_image'] ?>" height="60" ></br>
                              <h4 class="list-group-item-heading"><?= $message['uf_username']." ".$message['uf_surname'] ?></h4>
                              <small><?= date("h:i d.m.Y",$message['created']) ?></small>
                              <p class="list-group-item-text"><?= $message['text']?></p>
@@ -399,7 +401,7 @@ function sendMessage(taskId, senderId, addressee){
             success: function(response){
                 $('#messagePrel').hide();
                 $('#senMessageBut').show();
-                $('#messagesArea').append('<div class="list-group list-group-item"><h4 class="list-group-item-heading"><?= $this->currentUser->username ?> <?= $this->currentUser->username ?></h4><small>'+created+'</small><p class="list-group-item-text">'+message+'</p></div>');
+                $('#messagesArea').append('<div class="list-group list-group-item"><img src="<?= $this->baseUrl().'/images/users_images/'.$this->currentUser->image ?>" height="60" ></br><h4 class="list-group-item-heading"><?= $this->currentUser->username ?> <?= $this->currentUser->username ?></h4><small>'+created+'</small><p class="list-group-item-text">'+message+'</p></div>');
                 $('#messagesArea').animate({ scrollTop: 100000000 }, "slow");
             }
         }); 
