--- a/application/modules/default/views/scripts/layout.phtml
+++ b/application/modules/default/views/scripts/layout.phtml
@@ -202,16 +202,18 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
             <input name="pass" id="login-password" class="form-control input"  size="20" placeholder="Пароль" type="password">
           </div>
         </div>
-        <div class="form-group">
-            <a href="<?= $this->baseUrl()?>/s-auth/vk-link/">vk</a>
-            <a href="<?= $this->baseUrl()?>/s-auth/fb-link/">fb</a>
-            <a href="<?= $this->baseUrl()?>/s-auth/ok-link/">ok</a>
-        </div>
         <div >
           <div >
             <button onclick="login()"  class="btn  btn-block btn-lg btn-primary"  >Войти</button>
           </div>
         </div>
+        <div class="form-group">
+            <h5 style="padding:10px 0 10px 0;" class="text-center"> ИЛИ </h5>
+            <div class="control-group"> <a class="fb_button btn  btn-block btn-lg " href="<?= $this->baseUrl()?>/s-auth/vk-link/">  VK.COM </a> </div></br>
+            <div class="control-group"> <a class="fb_button btn  btn-block btn-lg " href="<?= $this->baseUrl()?>/s-auth/fb-link/">  FACEBOOK </a> </div></br>
+            <div class="control-group"> <a class="fb_button btn  btn-block btn-lg " href="<?= $this->baseUrl()?>/s-auth/ok-link/">  OK.RU</a> </div></br>
+        </div>
+        
         <!--userForm--> 
         
       </div>
@@ -240,7 +242,7 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
           <div class="control-group"> <a class="fb_button btn  btn-block btn-lg " href="<?= $this->baseUrl()?>/s-auth/vk-link/">  VK.COM </a> </div></br>
         <div class="control-group"> <a class="fb_button btn  btn-block btn-lg " href="<?= $this->baseUrl()?>/s-auth/fb-link/">  FACEBOOK </a> </div></br>
         <div class="control-group"> <a class="fb_button btn  btn-block btn-lg " href="<?= $this->baseUrl()?>/s-auth/ok-link/">  OK.RU</a> </div></br>
-        <h5 style="padding:10px 0 10px 0;" class="text-center"> OR </h5>
+        <h5 style="padding:10px 0 10px 0;" class="text-center"> ИЛИ </h5>
         
         <div class="form-group reg-username">
           <div >
