--- a/application/modules/admin/views/scripts/pagination.phtml
+++ b/application/modules/admin/views/scripts/pagination.phtml
@@ -7,7 +7,7 @@
 //
 
 ?>
-<ul class="pager top46">
+<ul class="">
  <?php
  foreach($this->pagesInRange as $page){
     if($this->current != $page){
@@ -16,11 +16,11 @@
         echo '<li><a href="#" class="active">'.$page.'</a></li>';
     }     
  }
-if(isset($this->next)){
-    echo ' <li><a href="'.$this->url(array('page' => $this->last)).'" class="last-page" >Конец</a></li>';
-}else{
-    echo '<li><a href="#" class="last-page" >Конец</a></li>';
-}
+//if(isset($this->next)){
+//    echo ' <li><a href="'.$this->url(array('page' => $this->last)).'" class="last-page" >Конец</a></li>';
+//}else{
+//    echo '<li><a href="#" class="last-page" >Конец</a></li>';
+//}
  ?>
 
 </ul>
