--- a/application/modules/customer/views/scripts/task/view.phtml
+++ b/application/modules/customer/views/scripts/task/view.phtml
@@ -49,7 +49,7 @@
 
   <!-- Nav tabs -->
   <ul class="nav nav-tabs" role="tablist">
-    <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Детали</a></li>
+    <li role="presentation" id="detailTab" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Детали</a></li>
     <?php if($this->task['status'] == 'taken' && $this->currentUser->banned == 0){?>
         <li role="presentation" id="messTab">
             <a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">
@@ -65,6 +65,9 @@
     ?>
         <li role="presentation"><a href="#apps" aria-controls="apps" role="tab" data-toggle="tab">Заявки <span class="badge"><?= $count ?></span></a></li>
     <?php } ?>
+   
+        <li role="presentation" id="commentsTab"><a href="#comments" aria-controls="comments" role="tab" data-toggle="tab">Комментарии </a></li>
+    
   </ul>
 
   <!-- Tab panes -->
@@ -161,6 +164,57 @@
         </div>
         <?php } ?>
     </div>
+    
+      <div role="tabpanel" class="tab-pane" id="comments" >
+          <?php if(!$this->comments){?>
+          <div class="col-sm-12">
+            <div class="list-group list-group-item">
+              <h3 class="list-group-item-heading">Сообщений пока нет</h3>
+            </div>
+          </div>
+          <?php }else{ ?>
+          <div class="col-sm-12"> 
+              <?php foreach($this->comments as $comment){?>
+              <div class="col-sm-12" style="padding-bottom: 10px">
+                 
+                    <?php if($comment['user_from'] == $this->currentUser->id){?>
+                        <div class="col-sm-3">
+                            <img src="<?= $this->baseUrl().'/images/users_images/'.$comment['u_image'] ?>" height="70">
+                        </div>
+                        <div class="col-sm-6">
+                            <h5><?= $comment['username'] ?></h5>
+                            <small><?= date("h:i d.m.y", $comment['created']); ?></small>
+                            <p><?= $comment['text'] ?></p>
+                        </div>
+                        <div class="col-sm-3"></div>
+                    <?php }else{?>
+                        <div class="col-sm-3"></div>
+                        <div class="col-sm-6">
+                            <h5><a href="<?= $this->baseUrl().'/customer/performes/view/id/'.$comment['u_id'] ?>"><?= $comment['u_username'] ?></a></h5>
+                            <small><?= date("h:i d.m.y", $comment['created']); ?></small>
+                            <p><?= $comment['text'] ?></p>
+                        </div>
+                        <div class="col-sm-3">
+                            <img src="<?= $this->baseUrl().'/images/users_images/'.$comment['u_image'] ?>" height="70">
+                        </div>
+                        
+                    <?php }?>
+                       
+                        </div>
+              <?php } ?> 
+          </div>
+          <?=  $this->paginationControl($this->comments, 'Sliding', 'pagination.phtml') ?>
+          <?php } ?>
+          <div class="col-sm-12" style="padding-bottom: 10px">
+              <label>Сообщение</label>
+              <textarea class="form-control" id="commnetTextArea" style="width: 100%"></textarea>    
+          </div>
+          <div class="col-sm-12">
+              <button class="btn btn-primary" id="sendCommentButton">Отправить</button>
+              <img id="sendCommentPrel" src="<?= $this->baseUrl(),'/images/blue_preloader.gif' ?>" style="display:none" width="50">
+          </div>
+      </div>
+    
       <?php if($this->task['status'] == 'taken' && $this->currentUser->banned == 0){?>
             <div role="tabpanel" class="tab-pane" id="messages" >
                 <?php if($this->taskMessages){?>
@@ -202,7 +256,7 @@
 
         <div class="row">
       
-       <table id="prepTable" class="table table-striped table-bordered" cellspacing="0" width="100%">
+       <table id="prepTable" class="table table-striped table-bordered table-responsive" cellspacing="0" width="100%">
         <thead>
             <tr>
                 <th>Исполнитель</th>
@@ -324,7 +378,15 @@
 $(document).ready(function(){
     $('#prepTable').DataTable({
     });
-     
+     // get currrent url
+     var currentUrl = document.URL;
+     var hasPage = currentUrl.indexOf('page');console.log(hasPage);
+     if(hasPage >= 0){
+         $('#detailTab').removeClass('active');
+//         $('#commentsTab').addClass('active');
+         $('#commentsTab a').tab('show');
+         
+     }
     //var n = $('#messagesArea').height();
     $('#messTab').click(function(){
         $('#messagesArea').animate({ scrollTop: 10000000000 }, "slow");
@@ -346,7 +408,37 @@ $(document).ready(function(){
 
   var timer = setInterval(function() { checkNewMessages() }, 2000);
 
+    $('#sendCommentButton').bind("click", function(){
+        sendComment();
+    });
 });
+
+function sendComment(){
+    $('#sendCommentButton').hide();
+    $('#sendCommentPrel').show();
+    var comment = $('#commnetTextArea').val();
+    var userId = "<?= $this->currentUser->id ?>";
+    var taskId = "<?= $this->task['id'] ?>";
+    $.ajax({
+    type: 'POST',
+    url: '<?= $this->baseUrl.'/customer/comments/send-comment'; ?>',
+    data: {
+            comment: comment,
+            userId: userId,
+            taskId: taskId
+    },
+    success: function(data){
+        if(data === 'true'){
+            $('#sendCommentPrel').hide();
+            $('#sendCommentButton').show();
+            alert('Сообщение отправлено');
+            var url = '<?= $this->baseUrl().'/customer/task/view/id/'.$this->task['id'] ?>';
+            window.location.href = url;
+        }
+    }
+}); 
+}    
+
 function checkNewMessages(){
         var taskId = "<?= $this->task['id'] ?>";
         $.ajax({
