--- a/application/modules/performer/views/scripts/user/index.phtml
+++ b/application/modules/performer/views/scripts/user/index.phtml
@@ -235,7 +235,7 @@
     <div role="tabpanel" class="tab-pane active" id="orders">
        <!--datatable-->
 
-        <table id="table" class="table table-striped table-bordered" cellspacing="0" width="100%">
+        <table id="table" class="table table-striped table-bordered table-responsive" cellspacing="0" width="100%">
                 <thead>
                     <tr>
                         <th>Задача</th>
@@ -268,7 +268,7 @@
        
     </div>
     <div role="tabpanel" class="tab-pane" id="tasks">
-        <div class="row">
+       
        <?php if($this->orders){?>     
        <table id="tasksTable" class="table table-striped table-bordered table-responsive" cellspacing="0" width="100%">
         <thead>
@@ -313,7 +313,7 @@
             Вы пока не создали ни одной задачи
             </div>
        <?php }?>    
-        </div>
+       
     </div>
     <?php if($this->userPrepositions){?>  
         <div role="tabpanel" class="tab-pane" id="app">
